@@ -179,6 +179,7 @@ program = {
 program = {
   name = grub-fstest;
   mansection = 1;
+  common_nodist = grub_fstest_init.c;
   common = util/grub-fstest.c;
   common = grub-core/kern/emu/hostfs.c;
   common = grub-core/disk/host.c;
